authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-deployment
  labels:
    app: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: authentication  
#       annotations: 
#         date: "+%H:%M:%S %d/%m/%y"
    spec:     # pod spec
      imagePullSecrets:
      - name: jfrog-secret
      containers: 
      - name: authentication
        #image: deepthi/login-docker:latest # image we pushed
        image: sreyo.jfrog.io/dd-docker-dev-local/login-docker:latest # image we pushed
        
        #imagePullPolicy: Never
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: authentication
spec:
  selector:
    app: authentication 
  ports:
    - port: 3000
      targetPort: 3000
